RESOLVED FIXED307021
REGRESSION(306820@main): Broke iOS builds
https://bugs.webkit.org/show_bug.cgi?id=307021
Summary REGRESSION(306820@main): Broke iOS builds
Abrar Rahman Protyasha
Reported 2026-02-04 18:56:53 PST
``` In file included from /Volumes/Data/worker/tvOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-appletvsimulator/DerivedSources/WebKit/unified-sources/UnifiedSource50-nonARC.mm:1: /Volumes/Data/worker/tvOS-26-Simulator-Build-EWS/build/Source/WebKit/UIProcess/RemoteLayerTree/ios/ScrollingTreeScrollingNodeDelegateIOS.mm:347:28: error: no member named 'tracksImmediatelyWhileDecelerating' in 'WTF::RetainPtr<WKBaseScrollView>' 347 | scrollView.tracksImmediatelyWhileDecelerating = NO; | ~~~~~~~~~~ ^ /Volumes/Data/worker/tvOS-26-Simulator-Build-EWS/build/Source/WebKit/UIProcess/RemoteLayerTree/ios/ScrollingTreeScrollingNodeDelegateIOS.mm:348:28: error: no member named '_avoidsJumpOnInterruptedBounce' in 'WTF::RetainPtr<WKBaseScrollView>' 348 | scrollView._avoidsJumpOnInterruptedBounce = YES; | ~~~~~~~~~~ ^ 2 errors generated. ```
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-04 18:57:00 PST
Abrar Rahman Protyasha
Comment 2 2026-02-04 19:00:34 PST
EWS
Comment 3 2026-02-04 19:03:54 PST
Committed 306830@main (d16228dcd998): <https://commits.webkit.org/306830@main> Reviewed commits have been landed. Closing PR #57915 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.