REGRESSION(306820@main): Broke iOS builds https://bugs.webkit.org/show_bug.cgi?id=307021 rdar://169672848

Unreviewed, fixes the build by adjusting to the RetainPtr-ification of
`scrollView` made in the commit right beofre 306820@main landed.

* Source/WebKit/UIProcess/RemoteLayerTree/ios/ScrollingTreeScrollingNodeDelegateIOS.mm:
(WebKit::ScrollingTreeScrollingNodeDelegateIOS::commitStateAfterChildren):

Canonical link: https://commits.webkit.org/306830@main